--- a/client/src/components/contact/contact.css
+++ b/client/src/components/contact/contact.css
@@ -2,3 +2,37 @@
     background-color: bisque;
     
 }
+
+.backgroundContactMe{
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-auto-rows: 30px;
+}
+
+.backgroundImgContactMe{
+    
+    object-fit: cover;
+    position: fixed;
+    top: 0;
+    z-index: -1;
+}
+
+.backgroundColorContactMe{
+    background-color: rgba(240, 255, 255, 0.301);
+    grid-column: 1/13;
+    grid-row: 1/19;
+    margin: 0 5vw 0 5vw ;
+
+}
+
+.titleContactMe{
+    grid-column: 2/12;
+    grid-row: 3/6;
+    background-color: yellowgreen;
+}
+
+.contentContactMe{
+    grid-column: 2/12;
+    grid-row: 6/8;
+    background-color: rgb(101, 131, 42);
+}
