--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,4 +1,63 @@
-.backgroundNav{
-    background-color: rgb(115, 197, 197);
+a:link, a:visited{
+    text-decoration: none;
+    font-size: 1.6em;
+    color: rgb(255, 255, 255);
+    padding: 0 2vw 0 2vw;
+   
     display: flex;
+    background-color: rgb(240, 153, 125);
+    border-radius: 20px;
+    cursor: pointer;
+    text-align: center;
+    width: 7em;
+    justify-content: center;
+    
 }
+
+
+.backgroundNav{
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-auto-rows: 30px;
+
+    background-color: rgb(115, 197, 197);
+    height: 3em;
+    position: sticky;
+    top: 0; 
+    background-color: rgba(255, 195, 161, 0.904);
+}
+
+.containerButtonsNav{
+    grid-column: 2/12;
+    grid-row: 1;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 2vh;
+}
+
+
+
+/* .button {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;	
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+  }
+  
+  .button:hover {background-color: #3e8e41}
+  
+  .button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  } */
