--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -7,7 +7,7 @@
 .backgroundHome{
     display: grid;
     grid-template-columns: repeat(12,1fr);
-    grid-auto-rows: 30px;
+    grid-auto-rows: 5vh;
 }
 
 .backgroundImgHome{
@@ -23,7 +23,7 @@
 .backHome{
     background-color:rgba(167, 93, 93, 0.836);
     grid-column: 1/13;
-    grid-row: 1/19;
+    grid-row: 1/17;
     margin: 0 5vw 0 5vw ;
 }
 
