--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -24,7 +24,7 @@ a:link, a:visited{
     height: 3em;
     position: sticky;
     top: 0; 
-    background-color: rgba(255, 195, 161, 0.986);
+    background-color: bisque
 }
 
 .containerButtonsNav{
