--- a/client/src/components/skills/skills.css
+++ b/client/src/components/skills/skills.css
@@ -15,32 +15,36 @@
 .backgroundColorSkills{
     background-color: rgba(167, 93, 93, 0.836);
     grid-column: 1/13;
-    grid-row: 1/50;
+    grid-row: 1/56;
     margin: 0 5vw 0 5vw ;
     z-index: -1;
 
 }
 
-.titleSkills{
+.containerFlexSkills{
+    display: flex;
     grid-column: 2/12;
-    grid-row: 2/6;
+    grid-row: 2;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.titleSkills{
+    
     color: white;
     font-size: 2.7em;
     text-align: center;
 }
 
 .titleTechSkills{
-    grid-column: 2/12;
-    grid-row: 5/7;
+    
     color: white;
     font-size: 1.5em;
     text-align: center;
-    align-self: center;
 }
 
 .contentTechSkills{
-    grid-column: 3/11;
-    grid-row: 8;
+    
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -52,6 +56,7 @@
     font-size: 1.5em;
     color: white;
     padding-bottom: 15px;
+    text-align: center;
 }
 
 .imgTechSkills{
@@ -61,44 +66,50 @@
 
 
 .titleProcessSkills{
-    grid-column: 2/12;
-    grid-row: 31;   
+     
     color: white;
     font-size: 1.5em;
     text-align: center;
-    align-self: center;
 }
 
 .contentProcessSkills{
-    grid-column: 2/12;
-    grid-row: 34;
+    
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
-    gap: 8em;
+    gap: 2em;
 }
 
 .titleToolSkills{
-    grid-column: 2/12;
-    grid-row: 12/13;
-    background-color: rgb(194, 124, 45);
+    color: white;
+    font-size: 1.5em;
+    text-align: center;
 }
 
 .contentToolSkills{
-    grid-column: 2/12;
-    grid-row: 13/15;
-    background-color: rgb(146, 95, 36);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    gap: 2em;
 }
 
 .titleCertificationsSkills{
-    grid-column: 2/12;
-    grid-row: 15/16;
-    background-color: rgb(214, 52, 52);
+    color: white;
+    font-size: 1.5em;
+    text-align: center;
 }
 
 .contentCertificationsSkills{
-    grid-column: 2/12;
-    grid-row: 16/18;
-    background-color: rgb(143, 40, 40);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    gap: 2em;
+}
+
+.imgCertificatesSkills{
+    width: 15em;
+    height: 10em;
 }
