--- a/client/src/components/projects/projects.css
+++ b/client/src/components/projects/projects.css
@@ -2,7 +2,7 @@
 .backgroundProjects{
     display: grid;
     grid-template-columns: repeat(12,1fr);
-    grid-auto-rows: 30px;
+    grid-template-rows: 12em 25em 25em 25em;
 }
 
 .backgroundImgProjects{
@@ -14,22 +14,53 @@
 }
 
 .backgroundColorProjects{
-    background-color: rgba(240, 255, 255, 0.301);
+    background-color:rgba(167, 93, 93, 0.836);
     grid-column: 1/13;
-    grid-row: 1/19;
+    grid-row: 1/3;
     margin: 0 5vw 0 5vw ;
+    z-index: -1;
 
 }
 
 .titleProjects{
+    
+    grid-column:8/13;
+    grid-row: 1;
+
+    text-align: end;
+    padding-top: 1.3em;
+    padding-right: 2em;
+    font-size: 3em ;
+    color: white;
+}
+
+.flexContainerProjects{
+
     grid-column: 2/12;
-    grid-row: 3/6;
-    background-color: yellowgreen;
+    grid-row: 2;
+
+    display: flex;
+    flex-wrap: wrap;
+    
 }
 
 .contentProjects{
-    grid-column: 2/12;
-    grid-row: 6/10;
-    background-color: rgb(106, 138, 43);
+   
+    grid-column: 1;
+    grid-row: 1;
+    display: flex;
+    flex-direction:row;
+    gap: 3em;
+}
+
+.descriptionProjects{
+    
+
+}
+
+.imgProjects{
+    
+    width: 27em;
+    height: 15em;
 }
 
