Adding components and styles

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -5,7 +5,8 @@ a:link, a:visited{
     padding: 0 2vw 0 2vw;
    
     display: flex;
-    background-color: rgb(240, 153, 125);
+    
+    background-color: rgb(235, 120, 78);
     border-radius: 20px;
     cursor: pointer;
     text-align: center;
@@ -13,28 +14,23 @@ a:link, a:visited{
     justify-content: center;
     
 }
-
+a:active {
+    background-color: rgb(240, 153, 125);
+    box-shadow: 0 5px #666;
+    transform: translateY(2px);
+}
 
 .backgroundNav{
-    display: grid;
-    grid-template-columns: repeat(12,1fr);
-    grid-auto-rows: 30px;
-
-    background-color: rgb(115, 197, 197);
+    
     height: 3em;
     position: sticky;
     top: 0; 
-    background-color: bisque
-}
-
-.containerButtonsNav{
-    grid-column: 2/12;
-    grid-row: 1;
-
+    background-color: bisque;
+    
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 2vh;
+    
 }
 
 
@@ -60,4 +56,4 @@ a:link, a:visited{
     background-color: #3e8e41;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
-  } */
+} */
