--- a/client/src/components/contact/contact.css
+++ b/client/src/components/contact/contact.css
@@ -1,43 +1,128 @@
 .backgroundContact{
     background-color: rgb(255, 195, 161);
-    bottom: 0;
     width: 100%;
     display: flex;
     justify-content: space-around;
-    height: 5.2em;
+    height: 3.2em;
     align-items: center;
+    position:fixed;
+    bottom: 0;
+    transition: 0.3s;
+    
+}
+
+.backgroundContact:hover{
+    height: 5.2em;
 }
 
 .backgroundContactMe{
-    display: grid;
-    grid-template-columns: repeat(12,1fr);
-    grid-auto-rows: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    flex-wrap: wrap;
 }
 
 .backgroundImgContactMe{
     
     object-fit: cover;
     position: fixed;
+    height: 100%;
+    width: 100%;
     top: 0;
-    z-index: -1;
+    z-index: -2;
 }
 
 .backgroundColorContactMe{
-    background-color: rgba(240, 255, 255, 0.301);
-    grid-column: 1/13;
-    grid-row: 1/19;
+    background-color: rgba(167, 93, 93, 0.836);
+    
+    height: 100%;
+    width: 90%;
+    position: fixed;
+    object-fit: cover;
+    top: 0;
     margin: 0 5vw 0 5vw ;
+    z-index: -1;
 
 }
 
 .titleContactMe{
-    grid-column: 2/12;
-    grid-row: 3/6;
-    background-color: yellowgreen;
+    
+    margin-top: 1.55em;
+    color: white;
+    font-size: 2.7em;
+    text-align: center;
 }
 
 .contentContactMe{
-    grid-column: 2/12;
-    grid-row: 6/8;
-    background-color: rgb(101, 131, 42);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    color: white;
+    
+}
+
+.labelContactMe{
+    display: flex;
+    text-align: start;
+    padding: 0.5em 0 0.2em 0;
+}
+
+.inputContactMe{
+    width: 25em;
+}
+.messageContactMe{
+    width: 25em;
+    height: 15em;
+}
+
+.sendButtonContactMe{
+    width: 5em;
+    height: 2em;
+    border-radius: 20px;
+    margin: 0 10em 0 10em;
+}
+
+/* EmailSended Component */
+
+.backgroundEmailSended{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    flex-wrap: wrap;
+}
+
+.backgroundColorEmailSended{
+    background-color: rgba(167, 93, 93, 0.836);
+    
+    height: 100%;
+    width: 90%;
+    position: fixed;
+    object-fit: cover;
+    top: 0;
+    margin: 0 5vw 0 5vw ;
+    z-index: -1;
+}
+
+.backgroundImgEmailSended{
+    object-fit: cover;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    z-index: -2;
+}
+
+.titleEmailSended{
+    margin-top: 1.55em;
+    color: white;
+    font-size: 2.7em;
+    text-align: center;
+}
+
+.mesaggeEmailSended{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    color: white;
+    font-size: 2em;
 }
