--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -5,14 +5,15 @@
 }
 
 .backgroundHome{
-    display: grid;
-    grid-template-columns: repeat(12,1fr);
-    grid-auto-rows: 5vh;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    /* gap: 2em; */
 }
 
 .backgroundImgHome{
     
-    z-index: -1;
+    z-index: -2;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -22,29 +23,36 @@
 
 .backHome{
     background-color:rgba(167, 93, 93, 0.836);
-    grid-column: 1/13;
-    grid-row: 1/17;
+    height: 100%;
+    width: 90%;
+    position: fixed;
+    object-fit: cover;
+    top: 0;
     margin: 0 5vw 0 5vw ;
+    z-index: -1;
+    
 }
 
 .titleHome{
-    grid-column: 2/12;
-    grid-row: 3/6;
+    
     font-size: 3em ;
     color: white;
+    margin: 1em 2em 0 2em;
+    
 }
 .subtitleHome{
-    grid-column: 3/12;
-    grid-row: 5/7;
-    font-size: 2.5em;
+   
+    font-size: 0.8em;
     color: white;
-    align-self: center;
+    padding-top: 0.2em;
+    margin-left: 3em;
+    margin-right: 3em;
 
 }
 
 .descriptionHome{
-    grid-column: 7/12;
-    grid-row: 10/12;
+    margin: 3em 5em 1em 6em;
+    text-align: end;
     font-size: 1.5em;
     color: white;
 }
