--- a/client/src/components/projects/projects.css
+++ b/client/src/components/projects/projects.css
@@ -9,27 +9,30 @@
     
     object-fit: cover;
     position: fixed;
+    width: 100%;
+    height: 100%;
     top: 0;
     z-index: -1;
 }
 
 .backgroundColorProjects{
-    background-color:rgba(167, 93, 93, 0.836);
-    grid-column: 1/13;
-    grid-row: 1/3;
+    background-color: rgba(167, 93, 93, 0.836);
+    
+    height: 100%;
+    width: 90%;
+    position: fixed;
+    object-fit: cover;
+    top: 0;
     margin: 0 5vw 0 5vw ;
     z-index: -1;
-
 }
 
 .titleProjects{
     
-    grid-column:8/13;
+    grid-column:2/12;
     grid-row: 1;
-
-    text-align: end;
-    padding-top: 1.3em;
-    padding-right: 2em;
+    text-align: center;
+    padding-top: 1.4em;
     font-size: 3em ;
     color: white;
 }
@@ -50,13 +53,11 @@
     grid-row: 1;
     display: flex;
     flex-direction:row;
+    flex-wrap: wrap;
     gap: 3em;
+    color: white;
 }
 
-.descriptionProjects{
-    
-
-}
 
 .imgProjects{
     
