--- a/client/src/components/skills/skills.css
+++ b/client/src/components/skills/skills.css
@@ -2,20 +2,29 @@
     display: grid;
     grid-template-columns: repeat(12,1fr);
     grid-auto-rows: 30px;
+    
 }
 
 .backgroundImgSkills{
     
     object-fit: cover;
     position: fixed;
+    height: 100%;
+    width: 100%;
     top: 0;
     z-index: -2;
+    
+    
 }
 
 .backgroundColorSkills{
     background-color: rgba(167, 93, 93, 0.836);
-    grid-column: 1/13;
-    grid-row: 1/56;
+    
+    height: 100%;
+    width: 90%;
+    position: fixed;
+    object-fit: cover;
+    top: 0;
     margin: 0 5vw 0 5vw ;
     z-index: -1;
 
@@ -27,12 +36,13 @@
     grid-row: 2;
     flex-wrap: wrap;
     justify-content: center;
+    
 }
 
 .titleSkills{
     
     color: white;
-    font-size: 2.7em;
+    font-size: 3em;
     text-align: center;
 }
 
@@ -107,6 +117,7 @@
     justify-content: center;
     text-align: center;
     gap: 2em;
+    margin-bottom: 10em;
 }
 
 .imgCertificatesSkills{
