--- a/client/src/components/contact/contact.css
+++ b/client/src/components/contact/contact.css
@@ -1,5 +1,8 @@
+/* CONTACT COMPONENT */
+
 .backgroundContact{
-    background-color: rgb(255, 195, 161);
+    background-image: linear-gradient( 68.3deg,  rgba(245,177,97,1) 0.4%, rgb(236, 54, 54)  100.2% );
+    
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -14,6 +17,8 @@
 .backgroundContact:hover{
     height: 5.2em;
 }
+
+/* CONTACTME COMPONENT */
 
 .backgroundContactMe{
     display: flex;
@@ -33,8 +38,7 @@
 }
 
 .backgroundColorContactMe{
-    background-color: rgba(167, 93, 93, 0.836);
-    
+    background: linear-gradient(62deg, rgba(156,20,20,0.7539390756302521) 0%, rgba(215,85,46,0.7511379551820728) 37%, rgba(215,142,46,0.7567401960784313) 76%); 
     height: 100%;
     width: 90%;
     position: fixed;
@@ -69,20 +73,36 @@
 
 .inputContactMe{
     width: 25em;
+    background: linear-gradient(62deg, rgba(255, 123, 83, 0.751) 40%, rgba(218, 139, 37, 0.757) 70%); 
+    border-radius: 5px;
+    border-color: white;
+    color: white;
 }
 .messageContactMe{
     width: 25em;
-    height: 15em;
+    height: 13em;
+    background: linear-gradient(62deg, rgba(255, 123, 83, 0.751) 40%, rgba(218, 139, 37, 0.757) 70%); 
+
+    border-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    color: white;
 }
 
 .sendButtonContactMe{
     width: 5em;
     height: 2em;
+    border: solid 1px white;
     border-radius: 20px;
     margin: 0 10em 0 10em;
+    background-color: rgb(235, 120, 78);
+    color: white;
+    transition: 0.2s;
+}
+.sendButtonContactMe:active{
+    background-color: rgb(238, 136, 40);
 }
 
-/* EmailSended Component */
+/* EMAILSENDED COMPONENT */
 
 .backgroundEmailSended{
     display: flex;
@@ -92,7 +112,7 @@
 }
 
 .backgroundColorEmailSended{
-    background-color: rgba(167, 93, 93, 0.836);
+    background: linear-gradient(62deg, rgba(156,20,20,0.7539390756302521) 0%, rgba(215,85,46,0.7511379551820728) 37%, rgba(215,142,46,0.7567401960784313) 76%);    height: 100%;
     
     height: 100%;
     width: 90%;
@@ -125,4 +145,5 @@
     justify-content: center;
     color: white;
     font-size: 2em;
+    margin: 1em 2em 3em 2em;
 }
