--- a/client/src/components/projects/projects.css
+++ b/client/src/components/projects/projects.css
@@ -16,7 +16,7 @@
 }
 
 .backgroundColorProjects{
-    background-color: rgba(167, 93, 93, 0.836);
+    background: linear-gradient(62deg, rgba(156,20,20,0.7539390756302521) 0%, rgba(215,85,46,0.7511379551820728) 37%, rgba(215,142,46,0.7567401960784313) 76%);    height: 100%;
     
     height: 100%;
     width: 90%;
