--- a/client/src/components/contact/contact.css
+++ b/client/src/components/contact/contact.css
@@ -145,5 +145,14 @@
     justify-content: center;
     color: white;
     font-size: 2em;
-    margin: 1em 2em 3em 2em;
+    margin: 1em 2em 2em 2em;
+}
+
+.informationEmailSended{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    color: white;
+    font-size: 1.5em;
+
 }
