--- a/client/src/components/projects/projects.css
+++ b/client/src/components/projects/projects.css
@@ -2,7 +2,7 @@
 .backgroundProjects{
     display: grid;
     grid-template-columns: repeat(12,1fr);
-    grid-template-rows: 12em 25em 25em 25em;
+    grid-template-rows: 12em 25em 25em;
 }
 
 .backgroundImgProjects{
@@ -40,22 +40,28 @@
 .flexContainerProjects{
 
     grid-column: 2/12;
-    grid-row: 2;
+    grid-row: 2/6;
 
     display: flex;
     flex-wrap: wrap;
-    
+    flex-direction:row;
+    gap: 4em;
+    justify-content: center;
+}
+
+.titleOfProjects{
+    color: white;
+    font-size: 1.7em;
 }
 
 .contentProjects{
    
-    grid-column: 1;
-    grid-row: 1;
     display: flex;
-    flex-direction:row;
     flex-wrap: wrap;
-    gap: 3em;
-    color: white;
+    justify-content: center;
+    gap: 4em;
+    
+    
 }
 
 
@@ -63,5 +69,12 @@
     
     width: 27em;
     height: 15em;
+    
+   
+    
 }
 
+.descriptionProjects{
+    color: white;
+    margin: 0 1em 5em 1em;
+}
