--- a/client/src/components/projects/Projects.css
+++ b/client/src/components/projects/Projects.css
@@ -297,3 +297,73 @@
         height: 35vh;
     }
 }
+
+@media (max-width: 360px){
+    .titleProjects{
+        text-align: center;
+        padding-top: 1.4em;
+        font-size: 8vw ;
+        color: white;
+    }
+    .contentProjectsCP{
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 6em;
+        gap: 10em;
+    }
+    .descriptionProjectsCP{
+        display: flex;
+        align-items: center;
+        color: white;
+        height: 23em;
+        width: 80%;
+    }
+    .titleOfProjectsCP{
+        color: white;
+        font-size: 1.7em;
+        margin-top: 2em;
+        text-align: center;
+    }
+    .contentProjects{
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 6em;
+        gap: 16em;
+    }
+    .positionImgProjects{
+        justify-content: center;
+    }
+    .titleOfProjects{
+        color: white;
+        font-size: 1.7em;
+        margin-top: 5em;
+        text-align: center;
+    }
+    .descriptionProjects{
+        display: flex;
+        align-items: center;
+        color: white;
+        height: 23em;
+        width: 80%;
+    }
+    .titleOfProjectsHC{
+        color: white;
+        font-size: 1.7em;
+        margin-top: 7em;
+        text-align: center;
+    }
+    .contentProjectsHC{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 2em;
+        font-size: 0.8em;
+    }
+    .descriptionProjectsHC{
+        display: flex;
+        align-items: center;
+        color: white;
+        height: 12em;
+        width: 80%;
+    }
+}
